# da_chuang

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: beginner-guide.md  benes-8x8-learning-plan.md  member-a-topology.md  member-b-algorithm.md
scripts/: build_exe.ps1
src/benes/: __init__.py  app.py  layout.py  metrics.py  routing.py  topology.py  visualize.py
src/benes/ui/: __init__.py  graph_view.py  main_window.py
tests/: test_metrics.py  test_routing.py  test_topology.py  test_ui.py  test_visualize.py
