[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "benes-path-planner"
version = "0.1.0"
description = "Interactive 8x8 Benes shortest path planner"
requires-python = ">=3.11,<3.12"
dependencies = [
    "networkx>=3.4,<4",
    "matplotlib>=3.9,<4",
    "PySide6>=6.8,<7",
]

[project.scripts]
benes-path-planner = "benes.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

